--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="/Users/LouisDecloedt/Documents/drawitgui.jar"/>
+	<classpathentry kind="lib" path="/Users/LouisDecloedt/Desktop/OGP/drawitgui_part2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
