--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="/Users/LouisDecloedt/Documents/drawitgui.jar"/>
 	<classpathentry kind="lib" path="/Users/LouisDecloedt/Desktop/OGP/drawitgui_part2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/logicalcollections"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
